Adding calendar file

--- a/_docs/CleanCal.tex
+++ b/_docs/CleanCal.tex
@@ -140,6 +140,11 @@ Use second-level and higher headings within chapters like: \texttt{\#\#\ A\ shor
 
 The \texttt{index.Rmd} file is required, and is also your first book chapter. It will be the homepage when you render the book.
 
+\hypertarget{data}{%
+\section{Data}\label{data}}
+
+You can find my academic calendar here: \href{Data/res.ics}{`res.ics``}
+
 \hypertarget{render-book}{%
 \section{Render book}\label{render-book}}
 
