--- a/index.Rmd
+++ b/index.Rmd
@@ -27,6 +27,11 @@ Use second-level and higher headings within chapters like: `## A short section` 
 
 The `index.Rmd` file is required, and is also your first book chapter. It will be the homepage when you render the book.
 
+## Data
+
+You can find my academic calendar here: [`res.ics``](Data/res.ics)
+
+
 ## Render book
 
 You can render the HTML version of this example book without changing anything:
