--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ author: "John Doe"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
-# url: your book url like https://bookdown.org/yihui/bookdown
+url: 'https\://besibo.github.io/CleanCal/'
 # cover-image: path to the social sharing image like images/cover.jpg
 description: |
   This is a minimal example of using the bookdown package to write a book.
